[package]
name = "manta-mreq"
version = "0.1.0"
authors = ["David Pacheco <dap@joyent.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[dependencies]
chrono = { version = "0.4" }
serde = { version = "1.0.87" }
serde_derive = { version = "1.0.87" }
serde_json = { version = "1.0.38", features = [ "preserve_order" ] }
